--- a/node-frontend/bagel-bot/.env
+++ b/node-frontend/bagel-bot/.env
@@ -1,3 +1,3 @@
-SLACK_CLIENT_ID=
-SLACK_CLIENT_SECRET=
-SLACK_VERIFICATION_TOKEN=
+SLACK_CLIENT_ID=369235392373.403715408167
+SLACK_CLIENT_SECRET=804fcbdada0747c0766f68f04f0897f5
+SLACK_VERIFICATION_TOKEN=QPfYnHrLoqRLFWm63PUpVHkn
