--- a/node-frontend/bagel-bot/package.json
+++ b/node-frontend/bagel-bot/package.json
@@ -15,7 +15,10 @@
     "@slack/events-api": "^1.0.0",
     "body-parser": "^1.16.1",
     "dotenv": "^4.0.0",
+    "es6-promise": "^4.2.4",
     "express": "^4.14.1",
+    "isomorphic-fetch": "^2.2.1",
+    "node-fetch": "^2.1.2",
     "passport": "^0.3.2"
   }
 }
